# subpub

./: .editorconfig  .gitignore  Cargo.toml  README.md  commit-filter.sh  crate.crate  justfile
.github/workflows/: ci.yml  quick-check.yml
src/: cargo.rs  checkpoint.rs  crate_details.rs  crates.rs  crates_io.rs  dependencies.rs  git.rs  logging.rs  main.rs  one_crate.rs  publish.rs  testing.rs  toml.rs  version.rs
