[package]
name = "subpub"
version = "0.1.0"
edition = "2021"
description = "Automate the process of publishing crates from Substrate"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.2", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
semver = "1.0.6"
toml_edit = "0.13.4"
walkdir = "2.3.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tar = "0.4.38"
flate2 = "1.0.22"
