[package]
name = "subpub"
version = "0.1.0"
edition = "2021"
description = "Automate the process of publishing crates from Substrate"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.2", features = ["derive"] }
semver = "1.0.6"
toml_edit = "0.13.4"
walkdir = "2.3.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.24", features = ["derive"] }
