[package]
name = "subpub"
version = "0.2.0"
edition = "2021"
description = "Automate the process of publishing crates from Substrate"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
env_logger = "0.10"
log = "0.4"
semver = "1.0"
toml_edit = "0.19"
walkdir = "2.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
